--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   tool_blind_theme:
     path: tool/blind/theme
 
+  tool_blind_components:
+    path: tool/blind/components
+
+  core_util:
+    path: core/util
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
