--- a/core/util/pubspec.yaml
+++ b/core/util/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  custom_refresh_indicator: ^4.0.1
   flutter_svg: ^2.2.3
   intl: ^0.20.2
   shimmer: ^3.0.0
